# CPU_emulator

./: .gitignore  CMakeLists.txt  library.cpp  library.h
StackLib/: CMakeLists.txt  Stack.h
compiler/: lexeme.cpp  lexeme.h  parser.cpp  parser.h
lib/: CMakeLists.txt
lib/StackLib/: CMakeLists.txt  Stack.h
lib/StackLib/test/: CMakeLists.txt
parser/: CMakeLists.txt
parser/include/: arch.h  command.h  parser.h  utils.h
parser/src/: arch.cpp  command.cpp  parser.cpp  utils.cpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  StackTesting.cpp
